<resources>
    <string name="name_settings_preferences" translatable="false">settings_preferences</string>
    <string name="KEY_LANGUAGE" translatable="false">KEY_CURRENT_LANGUAGE</string>
    <string name="app_name">112App</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="right_icon">Right icon</string>
    <string name="hello_blank_fragment" translatable="false">Blank fragment</string>
    <string name="txt_call">CALL</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_message">MESSAGE</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum olor sit amet</string>
    <string name="lorem_ipsum_medium" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_large" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="changes_saved">Changes saved</string>
    <string name="title_biometric">Touch the fingerprint sensor</string>
    <string name="device_no_secure">Configure a password or on the device to use this functionality</string>
    <string name="empty" translatable="false" />
    <string name="loading">Loading…</string>
    <string name="service_listen_messages_description">Service that notifies new messages from chats</string>
    <string name="service_listen_notices_description">Service that notifies new notices</string>
    <string name="picture">[Picture]</string>
    <string name="notices_title">NOTICES</string>
    <string name="location_title">LOCATION</string>
    <string name="chats_title">CHATS</string>
    <string name="new_chat_title">NEW CHAT</string>
    <string name="confirm_chat_title">CONFIRMATION</string>
    <string name="user_profile_title">USER PROFILE</string>
    <string name="medical_information_title">MEDICAL INFORMATION</string>
    <string name="configuration_title">CONFIGURATION</string>
    <string name="about_title">ABOUT</string>
    <string name="legal_notice_title">LEGAL NOTICE</string>
    <string name="chat_title" translatable="false">CHAT</string>
    <string name="edit_profile">User profile</string>
    <string name="medical_info">Medical information</string>
    <string name="configuration">Configuration</string>
    <string name="legal_notice">Legal notice</string>
    <string name="about">About</string>
    <string name="txt_btn_main_notices">Notices</string>
    <string name="txt_btn_main_location">Location</string>
    <string name="txt_btn_main_chats">Chats</string>
    <string name="notices_alert_no_config">Notices area not configured</string>
    <string name="go_to_settings">It is recommended to set a warning area in configuration, otherwise, you will receive all warnings with no area limit.</string>
    <string name="txt_permission">Please, accept the permissions</string>
    <string name="txt_permission_call">Please, accept the permissions to make the call</string>
    <string name="txt_permission_location">Please, accept the permissions to use the location</string>
    <string name="location_no_enabled">Please, enable the GPS location of your phone</string>
    <string name="txt_permission_camera">Please, accept the permissions to use the camera</string>
    <string name="content_description_logo112">Logo 112 image</string>
    <string name="version_label_about">Version</string>
    <string name="number_version_text_about" translatable="false">1.0</string>
    <string name="version_text_about" translatable="false">(A15D39)</string>
    <string name="developed_label_about">Developed by:</string>
    <string name="developed_text_about" translatable="false">Teltronic S.A.U.</string>
    <string name="contact_label_about">Contact:</string>
    <string name="contact_text_about" translatable="false">practicas.aplicaciones@teltronic.es</string>
    <string name="url_about" translatable="false">www.teltronic.es</string>
    <string name="copyright_label" translatable="false">Copyright:</string>
    <string name="copyright_text">© 2020 All rights reserved</string>
    <string name="title_contact_legal">LEGAL CONTACT</string>
    <string name="email_legal" translatable="false">legal@teltronic.es</string>
    <string name="address1_legal" translatable="false">Polígono Malpica, C/F Oeste</string>
    <string name="address2_legal" translatable="false">50016 Zaragoza</string>
    <string name="address3_legal">SPAIN</string>
    <string name="phone1_legal" translatable="false">+34 976 46 56 56</string>
    <string name="phone2_legal" translatable="false">+34 976 46 57 20</string>
    <string name="title_full_name">Full name</string>
    <string name="title_email">Email</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_gender">Gender</string>
    <string name="title_allergy">Do you have allergies?</string>
    <string name="hint_allergy">Ex: Gluten, bee sting, penicillin…</string>
    <string name="title_disease">Do you have any disease?</string>
    <string name="hint_disease">Ex: Diabetes</string>
    <string name="title_disability">Do you have any disability?</string>
    <string name="hint_disability">Ex: Hearing impairment, motor disability…</string>
    <string name="title_medicine">Are you taking medication?</string>
    <string name="hint_medicines">Ex: Insulin</string>
    <string name="message_medical_information_saved">Medical information saved</string>
    <string name="language">Language</string>
    <string name="title_notices">Notices</string>
    <string name="txt_recieve_notices">Receive notices within a radius of</string>
    <string name="txt_no_recieve_notices">Never receive notices</string>
    <string name="txt_no_limits_recieve_notices">Receive notifications without distance limit</string>
    <string-array name="languages">
        <item>@string/spanish</item>
        <item>@string/english</item>
    </string-array>
    <string-array name="languages_values">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="lat_title">Lat:</string>
    <string name="long_title">Long:</string>
    <string name="content_description_copy_lat_lang">Button copy latitude and longitude</string>
    <string name="lat_long_copied">Latitude and longitude copied</string>
    <string name="string_format" translatable="false">%s</string>
    <string name="birthday_format" translatable="false">%s %s %s</string>
    <string name="txt_crime">Crime</string>
    <string name="txt_accident">Accident</string>
    <string name="txt_medical_urgency">Medical urgency</string>
    <string name="txt_other">Other</string>
    <string name="chat_state_in_progress">In progress</string>
    <string name="chat_state_in_processed">Processed</string>
    <string name="content_description_category_icon">Category icon</string>
    <string name="content_description_location_icon">Location icon</string>
    <string name="content_description_date_time_icon">Date and time icon</string>
    <string name="content_description_chat_state_icon">Chat state icon</string>
    <string name="content_description_btn_crime">Crime button</string>
    <string name="content_description_btn_accident">Accident button</string>
    <string name="content_description_btn_medical_urgency">Medical urgency button</string>
    <string name="content_description_other">Other button</string>
    <string name="content_description_notice_state_icon">Notice state icon</string>
    <string name="content_description_subcategory_icon">Subcategory icon</string>
    <string name="subcategory_crime_robbery">Robbery</string>
    <string name="subcategory_crime_vandalism">Vandalism, property damage</string>
    <string name="subcategory_crime_aggression">Aggression, fight</string>
    <string name="subcategory_crime_sexual_assault">Sexual assault</string>
    <string name="subcategory_crime_gender_violence">Gender violence</string>
    <string name="subcategory_crime_bullying">Bullying</string>
    <string name="subcategory_crime_radicalisms">Radicalisms</string>
    <string name="subcategory_accident_car_with_injured">Traffic accident with injured</string>
    <string name="subcategory_accident_car_without_injured">Traffic accident without injured</string>
    <string name="subcategory_accident_vehicle_fire">Vehicle fire</string>
    <string name="subcategory_accident_street_accident">Accident in the street</string>
    <string name="subcategory_accident_housing_accident">Accident at hone</string>
    <string name="subcategory_accident_house_fire">House fire</string>
    <string name="subcategory_accident_locked_inside_house">Locked in housing</string>
    <string name="subcategory_accident_locked_inside_elevator">Locked in elevator</string>
    <string name="subcategory_accident_mountain_accident">Accident / rescue in the bush</string>
    <string name="subcategory_accident_mountain_lost">Lost in the bush</string>
    <string name="subcategory_accident_aquatic_rescue">Water rescue</string>
    <string name="subcategory_accident_animal_attack">Animal attack</string>
    <string name="subcategory_accident_other">Other</string>
    <string name="subcategory_medical_urgency_fainting">Loss of consciousness or fainting</string>
    <string name="subcategory_medical_urgency_heart_attack">Chest pain / heart attack</string>
</resources>