<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_edit_profile"
        android:title="@string/edit_profile" />
    <item
        android:id="@+id/medicalInfoFragment"
        android:icon="@drawable/ic_medical_info"
        android:title="@string/medical_info" />
    <item
        android:id="@+id/configurationFragment"
        android:icon="@drawable/ic_config"
        android:title="@string/configuration" />
    <item
        android:id="@+id/legalNoticeFragment"
        android:icon="@drawable/ic_balance"
        android:title="@string/legal_notice" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/about" />
</menu>