<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.medicalInfo.MedicalInfoFragment">

    <data>

        <variable
            name="medicalInfoViewModel"
            type="com.teltronic.app112.screens.medicalInfo.MedicalInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/title_allergy"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAllergy"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_allergy"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_disease"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etDisease"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_disease"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_disability"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etDisability"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_disability"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_medicine"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etMedicine"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_medicines"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnSave"
                style="@style/btnPrimaryRed"
                android:layout_width="200dp"
                android:layout_height="62dp"
                android:drawableStart="@drawable/ic_save_white"
                android:text="@string/txt_save"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>